--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,16 +1,16 @@
 default:                                                      # Fallback if nothing is specified
-  initial:      jdecent                                       # used for author lookup in posts and for first two characters in the about page back button
+  initial:      csardo                                        # used for author lookup in posts and for first two characters in the about page back button
   name:         "Jekyll Decent"                               # used to display author name
-  cover:        /assets/mountain-alternative-cover.jpg        # OPTIONAL: defines location of cover image in about page
-  picture:      /assets/johndoe.jpg                           # OPTIONAL: author picture
+  cover:        /assets/delft.jpg        # OPTIONAL: defines location of cover image in about page
+  picture:      /assets/csardo.jpg                           # OPTIONAL: author picture
   bio:          This is my bio!                               # OPTIONAL: text below author name in posts
-  location:     Germany                                       # OPTIONAL: used to display location of the author
-  website:                          						  # OPTIONAL: link to the author of a post
+  location:     The Netherlands                                       # OPTIONAL: used to display location of the author
+  website:      https://carlossardo.github.io/
   email:                                                      # OPTIONAL: used in the about page
   twitter:                                                    # OPTIONAL: used in the about page
-  linkedin:                                                   # OPTIONAL: used in the about page
+  linkedin:     https://www.linkedin.com/in/carlossardo/
   xing:                                                       # OPTIONAL: used in the about page
-  github:                                                     # OPTIONAL: used in the about page
+  github:       https://github.com/CarlosSardo/               # OPTIONAL: used in the about page
   stackoverflow:                                              # OPTIONAL: used in the about page
   facebook:                                                   # OPTIONAL: used in the about page
   gplus:                                                      # OPTIONAL: used in the about page
@@ -23,22 +23,14 @@ default:                                                      # Fallback if noth
   twitch:                                                     # OPTIONAL: used in the about page
   s500px:                                                     # OPTIONAL: used in the about page
   reddit:                                                     # OPTIONAL: used in the about page
-jdecent:
-  initial:      jdecent
-  name:         "Jekyll Decent"       
-  cover:        /assets/mountain-alternative-cover.jpg  
-  picture:      /assets/johndoe.jpg  
+  msdn:         https://social.msdn.microsoft.com/Profile/carlos%20sardo # OPTIONAL: used in the about page
+csardo:
+  initial:      csardo
+  name:         "Carlos Sardo"       
+  cover:        /assets/delft.jpg  
+  picture:      /assets/csardo.jpg  
   bio:          This is my bio!
-  location:     Germany
+  location:     The Netherlands
   email:        "-"   
   twitter:      "-"    
   twitch:       "-"
-jwillmer:
-  initial:      jwillmer
-  name:         "Jens Willmer"        
-  picture:      /assets/jwillmer.jpg  
-  bio:          All about technology 
-  location:     Germany 
-  website:      "http://jwillmer.de/cv" 
-  twitter:      jenswillmer
-  github:       jwillmer
